# DASH_GUI

./: .dockerignore  .gitignore  .windsurfrules  DOCKER_HUB_SETUP.md  Dockerfile  Journal.md  MULTI_TENANT_ARCHITECTURE.md  README.md  README_ARCHIVE.md  STATUS.md  app.py  app_settings.json  build-local.sh  build-web-frontend.sh  config.json  create_address_sample_library.py  dev-build-frontend-web.sh  dev-docker-build-local.sh  dev-docker-publish-hub.sh  dev-start-both-docker.sh  dev-start-brick-docker.sh  dev-start-schema-docker.sh  dev-stop-both-docker.sh  docker-compose.yml  docker-entrypoint.sh  docker-healthcheck.sh  download_ontologies.py  example_address_composition.py  fifth_dash_shacl.html  fifth_dash_shacl.py  fifth_dash_shacl_simple.html  first_shacl_dash.py  install-docker-mac.sh  install-docker-on-unix.sh  install-docker-on-windows.ps1  launch_brick_generator.py  launch_combined_gui.py  launch_easy_gui.py  launch_gui.py  launch_guided_brick_gui.py  (+44 more)
brick_app/: DOCUMENTATION.md  README.md  __init__.py  brick_editor.py  gui_components.py  pyproject.toml
brick_app/api/: web_api.py
brick_app/api/static/: style.css
brick_app/api/templates/: index.html
brick_app/archive/: bricks.py  obsolete_brick_operations.py  obsolete_ui_abstraction.py  ontology_manager.py.backup  test_constraint_editor.py  test_refactored.py
brick_app/archive/examples/: basic_usage.py
brick_app/archive/interfaces/: editor_frontend.py  simple_gui_launcher.py
brick_app/archive/obsolete_core/: brick_core.py  dialog_controller.py  ontology_manager_broken.py
brick_app/archive/obsolete_gui/: simple_gui.py
brick_app/archive/obsolete_ui/: property_editor_widget.ui
brick_app/archive/schema/: main.py
brick_app/brick_app_v2.egg-info/: entry_points.txt
brick_app/business/: __init__.py
brick_app/core/: __init__.py  brick_backend.py  brick_core_simple.py  editor_backend.py  enrichment_engine.py  ontology_manager.py  session_manager.py  shacl_importer.py  widget_rules.ttl
brick_app/ui/: ontology_browser_simple.ui  ontology_search_dialog.ui  property_editor.ui  property_formatters.py
brick_app_v2/: DOCUMENTATION.md  README.md  __init__.py  brick_editor.py  bricks.py  gui_components.py  main.py  pyproject.toml  refactored_gui.py  setup.py  simple_gui.py  stateful_gui.py
brick_app_v2/api/: web_api.py
brick_app_v2/api/static/: app.js
brick_app_v2/api/templates/: index.html  index_old.html
brick_app_v2/archive/: brick_gui.py  bricks.py  gui_components.py.backup  obsolete_constraint_manager.py  obsolete_ui_abstraction.py  stateful_gui.py  test_refactored.py
brick_app_v2/archive/examples/: __init__.py
brick_app_v2/brick_app_v2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
brick_app_v2/business/: __init__.py  brick_operations.py  brick_service.py
brick_app_v2/core/: __init__.py  abstract_events.py  brick_backend.py  brick_core.py  brick_core_simple.py  brick_generator.py  editor_backend.py  editor_controller.py  enrichment_engine.py  multi_tenant_backend.py  ontology_manager.py  shacl_importer.py
brick_app_v2/docs/: constraint_editor.md
brick_app_v2/examples/: basic_usage.py
brick_app_v2/gui/: user_friendly_gui.py
brick_app_v2/interfaces/: __init__.py  simple_gui_launcher.py
brick_app_v2/state/: app_state.py
brick_app_v2/tests/: __init__.py
brick_app_v2/ui/: __init__.py  brick_editor_dialog.ui  constraint_editor.ui  help_dialog.ui  main_window.ui  ontology_browser.ui  ontology_browser_simple.ui  property_brick_browser.ui  property_editor.ui  ui_abstraction.py
schema_app/: PROJECT_STATUS.md  __init__.py  main.py  pyproject.toml  schema_todo.txt
schema_app/archive/: test_flask_api.py  test_tree_structure.py  test_ui_metadata.py
schema_app/core/: __init__.py  brick_integration.py  flow_engine.py  schema_core.py  schema_helper.py  shacl_export.py
schema_app/test_output/: regular_shacl.ttl
(+2063 files in other folders)
