[project]
name = "dash-gui"
version = "0.1.0"
description = "SHACL schema + brick editor with DASH form generation"
requires-python = ">=3.13"
dependencies = [
    "dash>=4.1.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "pandas>=3.0.2",
    "pyqt6>=6.11.0",
    "python-pptx>=1.0.2",
    "rdflib>=7.6.0",
]

[tool.uv.workspace]
members = [
    "brick_app",
    "schema_app",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "vulture>=2.16",
]
