[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brick-app"
version = "2.0.0"
description = "A clean, modular SHACL brick editor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.3",
    "flask-cors>=5.0.0",
    "PyQt6",
    "rdflib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.scripts]
brick-app = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "business*", "api*", "ui*"]

[tool.setuptools.package-data]
"*" = ["ui/*.ui"]
