[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-app"
version = "2.0.0"
description = "A SHACL schema editor with brick-based composition and DASH form generation"
readme = "PROJECT_STATUS.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.3",
    "flask-cors>=5.0.0",
    "PyQt6",
    "rdflib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.scripts]
schema-app = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "interfaces*", "main"]

[tool.setuptools.package-data]
"*" = ["ui/*.ui"]
